# PrepForge

./: .env.example  .gitignore  ARCHITECTURE_FREEZE_v1.md  Makefile  README.md  api.py  app.py  pyproject.toml  requirements.txt
ai_core/: __init__.py
api/: dependencies.py  main.py
benchmark/: __init__.py  ablation_runner.py  error_analysis.py  metrics.py  report_writer.py  run_benchmark.py
configs/: app_config.yaml  competencies.yaml  models.yaml  roles.yaml  rubrics.yaml  scoring_weights.yaml  success_criteria.yaml
database/: __init__.py  db_setup.py  models.py  repositories.py  seed_data.py
docs/: ABLATION_STUDY_REPORT.md  AI_GOVERNANCE.md  AI_ML_DESIGN.md  DATABASE_MODEL.md  ERROR_ANALYSIS_REPORT.md  PROJECT_REPORT.md  SOFTWARE_ARCHITECTURE.md
frontend/: api_client.py  session_state.py  streamlit_app.py
schemas/: __init__.py  answer_schema.py  benchmark_schema.py  competency_schema.py  evaluation_schema.py  question_schema.py  recommendation_schema.py  report_schema.py  resume_schema.py  rubric_schema.py
scripts/: generate_final_report.py  health_check.py  run_all_tests.py  run_demo.py  setup_project.py  test_resume_pipeline_integration.py  verify_integration.py
services/: __init__.py  analytics_service.py  competency_service.py  evaluation_service.py  interview_service.py  recommendation_service.py  report_service.py
tests/: smoke_benchmark.py  test_api.py  test_benchmark.py  test_database.py  test_evaluation_ensemble.py  test_recommendation_pipeline.py  test_resume_pipeline.py  test_services.py  test_shared_infrastructure.py  (+1 more)
(+68 files in other folders)
