[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-assistant"
version = "1.0.0"
description = "AI-Powered Interview Preparation and Career Readiness Assistant"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Project Team" }
]
license = { text = "MIT" }
dependencies = []

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
